[gd_scene load_steps=35 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Idle/frame-05.png" type="Texture" id=2]
[ext_resource path="res://Player/Idle/frame-07.png" type="Texture" id=3]
[ext_resource path="res://Player/Idle/frame-11.png" type="Texture" id=4]
[ext_resource path="res://Player/Idle/frame-01.png" type="Texture" id=5]
[ext_resource path="res://Player/Idle/frame-08.png" type="Texture" id=6]
[ext_resource path="res://Player/Idle/idle-12.png.png" type="Texture" id=7]
[ext_resource path="res://Player/Idle/frame-10.png" type="Texture" id=8]
[ext_resource path="res://Player/Run/frame-1.png" type="Texture" id=9]
[ext_resource path="res://Player/Run/frame-2.png" type="Texture" id=10]
[ext_resource path="res://Player/Idle/frame-09.png" type="Texture" id=11]
[ext_resource path="res://Player/Idle/frame-04.png" type="Texture" id=12]
[ext_resource path="res://Player/Run/frame-3.png" type="Texture" id=13]
[ext_resource path="res://Player/Idle/frame-02.png" type="Texture" id=14]
[ext_resource path="res://Player/Idle/frame-03.png" type="Texture" id=15]
[ext_resource path="res://Player/Run/frame-4.png" type="Texture" id=16]
[ext_resource path="res://Player/Run/frame-5.png" type="Texture" id=17]
[ext_resource path="res://Player/Run/frame-6.png" type="Texture" id=18]
[ext_resource path="res://Player/Run/frame-7.png" type="Texture" id=19]
[ext_resource path="res://Player/Ledge Grab/ledge grab-6.png.png" type="Texture" id=20]
[ext_resource path="res://Player/Run/run-8.png" type="Texture" id=21]
[ext_resource path="res://Player/Jump/jump.png" type="Texture" id=22]
[ext_resource path="res://Player/armado-1.png" type="Texture" id=23]
[ext_resource path="res://Player/armado-2.png" type="Texture" id=24]
[ext_resource path="res://Player/Mid Air/frame-1.png" type="Texture" id=25]
[ext_resource path="res://Player/Ledge Grab/frame-5.png" type="Texture" id=26]
[ext_resource path="res://Player/Ledge Grab/frame-4.png" type="Texture" id=27]
[ext_resource path="res://Player/Mid Air/mid air-2.png.png" type="Texture" id=28]
[ext_resource path="res://Player/Landing/landing.png" type="Texture" id=29]
[ext_resource path="res://Player/LargeShadow.png" type="Texture" id=30]
[ext_resource path="res://Player/Hearts/Heart.tscn" type="PackedScene" id=31]
[ext_resource path="res://Audios/Personagem Arma (mp3cut.net).wav" type="AudioStream" id=32]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 120, 260 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 21 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 29 ) ],
"loop": true,
"name": "landing",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 28 ) ],
"loop": false,
"name": "midair",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 26 ), ExtResource( 20 ) ],
"loop": true,
"name": "ledgegrab",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
scale = Vector2( 0.1, 0.1 )
z_index = 1
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = -2147483646
position = Vector2( 10, 30 )
shape = SubResource( 1 )

[node name="ShadowSprite" type="Sprite" parent="."]
light_mask = -2147483647
position = Vector2( 0, 300 )
scale = Vector2( 9.375, 4 )
texture = ExtResource( 30 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"
__meta__ = {
"_edit_lock_": true
}

[node name="up" type="RayCast2D" parent="."]
position = Vector2( 0, -270 )
scale = Vector2( 8, 3 )
enabled = true
collide_with_areas = true

[node name="dw" type="RayCast2D" parent="."]
position = Vector2( 0, -210 )
scale = Vector2( 8, 3 )
enabled = true
collide_with_areas = true

[node name="EndOfGun" type="Position2D" parent="."]
visible = false
position = Vector2( 241, 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlatformDetector" type="RayCast2D" parent="."]
position = Vector2( 0, 280 )
enabled = true
collision_mask = 64

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.7, 0.7 )
limit_smoothed = true
smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="Heart" parent="Camera2D/CanvasLayer" instance=ExtResource( 31 )]
margin_left = 23.0
margin_top = 21.0
margin_right = 63.0
margin_bottom = 61.0

[node name="Audio" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 32 )
volume_db = -20.0
